# quantum-rs

./: Cargo.toml  README.md
src/: lib.rs  qubit.rs
src/qubit/: custom_binary_num.rs
