[package]
name = "quantum-rs"
version = "0.1.0"
description = "This project is aimed at providing a quantum computing library written in Rust."
authors = ["ValpsZ https://github.com/ValpsZ"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
